--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.1",
+    "css-selector-generator": "^2.1.2",
+    "jquery": "^3.5.1",
     "postcss": "^8.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "webextension-polyfill-ts": "^0.22.0"
   }
 }
