--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "css-selector-generator": "^2.1.2",
+    "firebase": "^8.2.4",
+    "firebaseui": "^4.7.1",
     "jquery": "^3.5.1",
     "postcss": "^8.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "tailwindcss": "^2.0.2",
+    "uuid": "^8.3.2",
     "webextension-polyfill-ts": "^0.22.0"
   }
 }
