--- a/package.json
+++ b/package.json
@@ -24,19 +24,46 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "css-selector-generator": "^2.1.2",
     "dotenv": "^8.2.0",
+    "eslint": "^7.18.0",
     "firebase": "^8.2.4",
     "firebaseui": "^4.7.1",
+    "husky": "^4.3.8",
     "jquery": "^3.5.1",
+    "lint-staged": "^10.5.3",
     "postcss": "^8.2.4",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
+    "stylelint": "^13.9.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
     "tailwindcss": "^2.0.2",
     "uuid": "^8.3.2",
     "webextension-polyfill-ts": "^0.22.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "pretty-quick --staged",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix"
+    ]
   }
 }
