--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@types/jquery": "^3.5.5",
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-modal": "^3.10.6",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "autoprefixer": "^10.2.1",
@@ -44,9 +46,11 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-hook-form": "^6.14.2",
+    "react-modal": "^3.12.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
